--- a/app/public/assets/application.css
+++ b/app/public/assets/application.css
@@ -1,3 +1,33 @@
 body {
   font-family: 'helvetica neue', 'helvetica', 'arial', 'sans';
   font-size: 90%; }
+
+body {
+  margin: 0;
+  font-family: sans-serif;
+  background-color: #555; }
+
+.center-box {
+  padding: 15px 50px 15px 50px;
+  text-align: center; }
+
+.dbl-sided {
+  backface-visibility: visible !important;
+  -webkit-backface-visibility: visible !important; }
+
+.full-screen {
+  position: fixed;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0; }
+
+fa-app {
+  position: fixed !important;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
+.menu {
+  background-color: red; }
