touchscreen grid demo

--- a/app/application.scss
+++ b/app/application.scss
@@ -1,14 +1,13 @@
 body {
   font-family: 'helvetica neue', 'helvetica', 'arial', 'sans';
   font-size: 90%;
+  // cursor: none;
 }
 
 body {
     margin: 0;
     font-family: sans-serif;
     background-color: #555;
-    // -webkit-perspective: 0.0001;
-    // -webkit-perspective-origin: 0 0;
 }
 
 .center-box {
