temp button style

--- a/app/application.scss
+++ b/app/application.scss
@@ -45,3 +45,10 @@ webview {
  height: 100%;
  width: 100%;
 }
+
+button {
+  background: transparent;
+  color: #fff;
+  border: 1px solid #fff;
+  font-size: 100%;
+}
