--- a/app/application.scss
+++ b/app/application.scss
@@ -9,6 +9,7 @@ body {
     margin: 0;
     font-family: sans-serif;
     background-color: #222;
+    background-image: url('/dev-bg.png');
 }
 
 .center-box {
