--- a/app/public/assets/application.css
+++ b/app/public/assets/application.css
@@ -1,17 +1,22 @@
 body {
-  font-family: 'helvetica neue', 'helvetica', 'arial', 'sans';
-  font-size: 90%;
-  color: #fff; }
-
-body {
   margin: 0;
-  font-family: sans-serif;
+  font-family: 'FlamaCondensed', 'helvetica neue', 'helvetica', 'arial', 'sans';
+  font-weight: 500;
+  font-size: 200%;
+  color: #222;
   background-color: #222;
   background-image: url('/dev-bg.png'); }
 
-.center-box {
-  padding: 15px 50px 15px 50px;
-  text-align: center; }
+fa-app {
+  position: fixed !important;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
+webview {
+  height: 100%;
+  width: 100%; }
 
 .dbl-sided {
   backface-visibility: visible !important;
@@ -24,19 +29,8 @@ body {
   left: 0;
   right: 0; }
 
-fa-app {
-  position: fixed !important;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; }
-
-.menu {
-  background-color: red; }
-
-webview {
-  height: 100%;
-  width: 100%; }
+.menu-item {
+  background-color: #fff; }
 
 button {
   background: transparent;
