--- a/app/application.scss
+++ b/app/application.scss
@@ -13,6 +13,9 @@ body {
     color: #4D4E4C;
 }
 
+.section {
+  padding-left: 200px;
+}
 
 button {
   background: transparent;
@@ -26,13 +29,14 @@ button {
 // ----------------------------------------------------------------------
 
 h1 {
-  font-size: 77px;
+  font-size: 70px;
   font-weight: 600;
 }
 
 h3 {
-  font-size: 23px;
+  font-size: 18px;
   font-weight: 700;
+  text-transform: uppercase;
 }
 
 
@@ -70,23 +74,38 @@ webview {
 // ----------------------------------------------------------------------
 
 .menu-item {
-  background-color: #fff;
+  background-color: #c7242e;
+  color: #fff;
   text-align: right;
   box-sizing: border-box;
-  padding: 1.5rem;
-  border: 1px solid #979797;
-  border-top: none;
+  padding: 2rem;
+  border: 1px solid #000;
+  // border-top: none;
+  cursor: default;
 
+  * {
+    cursor: default;
+    -webkit-transition: opacity 0.3s;
+  }
+
+  .inactive {
+    opacity: 0;
+  }
 
   h1 {
-    margin: 0;
+    margin: 0 0 10px 0;
     padding: 0;
     line-height: 1;
+    cursor: pointer;
+    opacity: 1;
+    -webkit-transition: opacity 0.3s;
   }
 
   h3 {
     margin: 0;
     padding: 0;
+    opacity: 1;
+    -webkit-transition: opacity 0.3s;
   }
 }
 
