--- a/app/public/components/flama-webfont/flama.css
+++ b/app/public/components/flama-webfont/flama.css
@@ -20,7 +20,7 @@
        url('Flama-ThinItalic.woff') format('woff'),
        url('Flama-ThinItalic.svg') format('svg');
   font-weight: 100;
-  font-style: normal;
+  font-style: italic;
 }
 
 
