--- a/app/application.scss
+++ b/app/application.scss
@@ -13,6 +13,10 @@ body {
     color: #4D4E4C;
 }
 
+* {
+  cursor: default;
+}
+
 .section {
   padding-left: 200px;
 }
@@ -37,6 +41,17 @@ h3 {
   font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
+}
+
+.bigLightText {
+  font-family: 'Flama', 'helvetica neue', 'helvetica', 'arial', 'sans';
+  color: #c7242e;
+  text-transform: uppercase;
+  font-weight: 100;
+  font-size: 600%;
+  line-height: 1.15;
+  margin: 0;
+  padding: 0;
 }
 
 
@@ -116,4 +131,35 @@ webview {
 
 .map-container {
   background-color: #c1cdd3;
+}
+
+
+// Directory
+// ----------------------------------------------------------------------
+
+
+.directoryCategory {
+    border-right: 25px solid #dfdfde;
+}
+
+.directoryCategory h3 {
+  font-weight: 200;
+  font-size: 32px;
+  color: #fff;
+  padding-left: 180px;
+  letter-spacing: 4px;
+  white-space: nowrap;
+}
+
+.directoryCategory.active h3{
+  font-weight: 700;
+  color: #c7242e !important;
+}
+
+.directoryListing {
+  opacity: 0.9;
+}
+
+.txt-center {
+  text-align: center;
 }
