highlight menu item

--- a/app/application.scss
+++ b/app/application.scss
@@ -108,6 +108,10 @@ webview {
     opacity: 0;
   }
 
+  &.active {
+    background-color: #160808;
+  }
+
   h1 {
     margin: 0 0 10px 0;
     padding: 0;
@@ -124,6 +128,7 @@ webview {
     -webkit-transition: opacity 0.3s;
   }
 }
+
 
 
 // Map
