--- a/app/application.scss
+++ b/app/application.scss
@@ -15,6 +15,12 @@ body {
 
 * {
   cursor: default;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .section {
@@ -167,4 +173,16 @@ webview {
 
 .txt-center {
   text-align: center;
+}
+
+
+// Keyboard
+// ----------------------------------------------------------------------
+
+svg * { pointer-events: all; }
+
+g.active {
+  .key-background {
+    fill: #c7242e;
+  }
 }
