--- a/app/public/assets/application.css
+++ b/app/public/assets/application.css
@@ -8,7 +8,13 @@ body {
   color: #4D4E4C; }
 
 * {
-  cursor: default; }
+  cursor: default;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
 
 .section {
   padding-left: 200px; }
@@ -112,3 +118,9 @@ webview {
 
 .txt-center {
   text-align: center; }
+
+svg * {
+  pointer-events: all; }
+
+g.active .key-background {
+  fill: #c7242e; }
