--- a/app/application.scss
+++ b/app/application.scss
@@ -192,3 +192,11 @@ g.active {
     fill: #c7242e;
   }
 }
+
+.searchBox {
+  border-bottom: 2px solid #c7242e;
+  width: 60%;
+  margin: 30px auto;
+  padding: 20px 1em;
+  line-height: 1;
+}
