--- a/app/public/assets/application.css
+++ b/app/public/assets/application.css
@@ -144,3 +144,11 @@ g.active .key-background {
 /**** Pop Up ****/
 #popup-render-container {
   display: none; }
+
+.large-directory-card {
+  -webkit-border-bottom-right-radius: 20px;
+  -webkit-border-bottom-left-radius: 20px;
+  -moz-border-radius-bottomright: 20px;
+  -moz-border-radius-bottomleft: 20px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px; }
