left sidebar for large screen

--- a/app/application.scss
+++ b/app/application.scss
@@ -233,3 +233,12 @@ g.active {
 border-bottom-right-radius: 20px;
 border-bottom-left-radius: 20px;
 }
+
+
+// Large Screen Sidebar
+// ----------------------------------------------------------------------
+.sidebar-menu {
+  background: #231f20;
+}
+
+.sidebar-menu-btn {}
