--- a/app/application.scss
+++ b/app/application.scss
@@ -221,9 +221,26 @@ g.active {
 }
 
 
+// Store Card
+// -----------------------------------------------------------------------
+
+.miniMap {
+  width: 300px;
+  height: 300px;
+  margin-right: 10px;
+  border: 1px solid black;
+  float: left;
+
+  svg {
+    max-width: 300px;
+    max-height: 300px;
+  }
+
+}
+
 
 // Large Screen
-// ----------------------------------------------------------------------
+// -----------------------------------------------------------------------
 
 .large-directory-card {
   -webkit-border-bottom-right-radius: 15px;
@@ -274,7 +291,7 @@ g.active {
   ul {
     list-style-type: none;
     padding: 0;
-    
+
     li {
       color: #cdcdcd;
       font-size: 26px;
@@ -318,3 +335,4 @@ g.active {
     }
   }
 }
+
