--- a/app/application.scss
+++ b/app/application.scss
@@ -232,8 +232,8 @@ g.active {
   float: left;
 
   svg {
-    max-width: 300px;
-    max-height: 300px;
+    width: 300px;
+    height: 300px;
   }
 
 }
