added overlay for sidebar menu

--- a/app/application.scss
+++ b/app/application.scss
@@ -337,6 +337,16 @@ g.active {
 
 // Large Screen Sidebar
 // ----------------------------------------------------------------------
+.sidebar-overlay {
+  display: none;
+}
+
+.sidebar-menu-bg,
+.sidebar-menu-content,
+.sidebar-menu-btn {
+  z-index: 10;
+}
+
 .sidebar-menu-bg {
   background: #231f20;
 }
