--- a/app/public/assets/application.css
+++ b/app/public/assets/application.css
@@ -215,6 +215,12 @@ g.active .key-background {
   .large-directory-column p {
     font-family: 'Flama', 'helvetica neue', 'helvetica', 'arial', 'sans'; }
 
+.sidebar-overlay {
+  display: none; }
+
+.sidebar-menu-bg, .sidebar-menu-content, .sidebar-menu-btn {
+  z-index: 10; }
+
 .sidebar-menu-bg {
   background: #231f20; }
 
