--- a/app/application.scss
+++ b/app/application.scss
@@ -149,6 +149,22 @@ webview {
   background-color: #c1cdd3;
 }
 
+.map-level-selector-surface.active {
+  background-color: rgba(0,0,0,0.8);
+}
+
+.map-level-selector-surface {
+  background-color: rgba(100,100,100,0.8);
+}
+
+.map-level-selector {
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  padding-top: 35%;
+
+}
+
 
 // Directory
 // ----------------------------------------------------------------------
@@ -258,15 +274,15 @@ g.active {
 }
 
 .miniMap {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   margin-right: 10px;
   border: 1px solid black;
   float: left;
 
   svg {
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
   }
 
 }
@@ -285,22 +301,25 @@ g.active {
 
   li {
     overflow: hidden;
-    .floor-number {
-      display: block;
+    .floor-name {
+      display: none;
+    }
+    .store-listing {
+      -webkit-transition: background-color 1s, color 1s;
+      margin-right: 10px;
+      border-radius: 20px;
+      padding: 2px 10px 2px 0;
+
     }
   }
 
   li.highlighted {
     .store-listing{
-      background: #e01f26;
+      background-color: #e01f26;
       color: #fff;
       font-size: 90%;
       display: inline block;
-      margin-right: 10px;
-      border-radius: 20px;
       padding: 2px 10px;
-
-
 
       span.floor-name {
         float: right;
@@ -323,6 +342,10 @@ g.active {
   padding: 0;
   float: left;
   list-style-type: none;
+
+  .store-listing {
+    margin: 0 0 0.8em 0;
+  }
 
   li {
     list-style-type: none;
