--- a/app/public/assets/application.css
+++ b/app/public/assets/application.css
@@ -233,6 +233,9 @@ g.active .key-background {
   .large-directory-column p {
     font-family: 'Flama', 'helvetica neue', 'helvetica', 'arial', 'sans'; }
 
+.sidebar-overlay {
+  background: yellow; }
+
 .sidebar-menu-bg, .sidebar-menu-btn {
   z-index: 10; }
 
