--- a/app/application.scss
+++ b/app/application.scss
@@ -10,8 +10,8 @@ body {
     font-family: 'FlamaCondensed', 'helvetica neue', 'helvetica', 'arial', 'sans';
     font-weight: 500;
     color: #222;
-    background-color: #222;
-    background-image: url('/dev-bg.png');
+    background-color: #000;
+    // background-image: url('/dev-bg.png');
     color: #4D4E4C;
 }
 
