imported westfield icon font

--- a/app/application.scss
+++ b/app/application.scss
@@ -1,3 +1,5 @@
+@import "icons";
+
 // Generic + Base Styles
 // ----------------------------------------------------------------------
 $red: #ed1f26;
