--- a/app/application.scss
+++ b/app/application.scss
@@ -388,6 +388,39 @@ g.active {
   z-index: 14;
 }
 
+.large-menu-goBack {
+  h2 {
+    color: black;
+    font-size: 28px;
+    letter-spacing: 1px;
+  }
+}
+
+.large-menu-back-icon {
+  z-index: 16;
+  border: 5px solid #aaa;
+  border-radius: 100px;
+  font-size: 24px;
+  position: absolute;
+
+  .wf-arrow-left:before {
+    color: $red;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 26px;
+    height: 26px;
+  }
+}
+
+.large-menu-search-icon {
+  font-size: 70px;
+  z-index: 16;
+}
+
 .search-query-text,
 .search-query-placeholder,
 .search-results {
@@ -433,6 +466,10 @@ g.active {
       text-align: left;
     }
   }
+}
+
+.search-keyboard {
+  z-index: 20;
 }
 
 // Large Screen Weather
