--- a/app/public/assets/application.css
+++ b/app/public/assets/application.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "wf-icons";
-  src: url("/assets/wf-icons/fonts/wf-icons.eot");
-  src: url("/assets/wf-icons/fonts/wf-icons.eot?#iefix") format("embedded-opentype"), url("/assets/wf-icons/fonts/wf-icons.woff") format("woff"), url("/assets/wf-icons/fonts/wf-icons.ttf") format("truetype"), url("/assets/wf-icons/fonts/wf-icons.svg#wf-icons") format("svg");
+  src: url("/wf-icons/fonts/wf-icons.eot");
+  src: url("/wf-icons/fonts/wf-icons.eot?#iefix") format("embedded-opentype"), url("/wf-icons/fonts/wf-icons.woff") format("woff"), url("/wf-icons/fonts/wf-icons.ttf") format("truetype"), url("/wf-icons/fonts/wf-icons.svg#wf-icons") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -316,6 +316,9 @@
 .wf-holiday-hours:before {
   content: "\e001"; }
 
+.wf-arrow-left:before {
+  content: "\e002"; }
+
 body {
   margin: 0;
   font-family: 'FlamaCondensed', 'helvetica neue', 'helvetica', 'arial', 'sans';
@@ -572,6 +575,32 @@ g.active .key-background {
 .large-menu-stores-header, .large-menu-store-grid, .large-menu-goBack {
   z-index: 14; }
 
+.large-menu-goBack h2 {
+  color: black;
+  font-size: 28px;
+  letter-spacing: 1px; }
+
+.large-menu-back-icon {
+  z-index: 16;
+  border: 5px solid #aaa;
+  border-radius: 100px;
+  font-size: 24px;
+  position: absolute; }
+  .large-menu-back-icon .wf-arrow-left:before {
+    color: #ed1f26;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 26px;
+    height: 26px; }
+
+.large-menu-search-icon {
+  font-size: 70px;
+  z-index: 16; }
+
 .search-query-text, .search-query-placeholder, .search-results {
   z-index: 15; }
 
@@ -599,6 +628,9 @@ g.active .key-background {
   .search-results.largescreen h2 {
     margin-right: 20px;
     text-align: left; }
+
+.search-keyboard {
+  z-index: 20; }
 
 .largescreen-weather {
   color: white;
