--- a/app/public/assets/application.css
+++ b/app/public/assets/application.css
@@ -543,27 +543,53 @@ g.active .key-background {
   list-style-type: none;
   padding: 0; }
   .large-menu-category-grid ul li {
-    color: #262223;
-    font-size: 26px;
-    line-height: 46px;
-    letter-spacing: 1px; }
+    color: black;
+    font-size: 28px;
+    line-height: 30px;
+    letter-spacing: 1px;
+    margin: 0 0 20px 0;
+    padding-right: 30px; }
 
-.large-menu-store-header h2 {
+.large-menu-stores-header h2 {
   color: black;
   letter-spacing: 1px; }
+
+.large-menu-floors-header, .large-menu-floors-grid, .large-menu-floor {
+  z-index: 20; }
+
+.large-menu-floor {
+  border-radius: 100px;
+  background: #bbb;
+  color: white;
+  height: 50px;
+  width: 50px; }
+  .large-menu-floor p, .large-menu-floor h1 {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    text-transform: uppercase; }
+  .large-menu-floor p {
+    padding-top: 7px;
+    font-size: 14px; }
+  .large-menu-floor h1 {
+    font-size: 30px;
+    margin-top: -10px;
+    font-family: georgia;
+    font-weight: normal; }
 
 .large-menu-store-grid ul {
   list-style-type: none;
   padding: 0; }
   .large-menu-store-grid ul li {
-    color: #262223;
-    font-size: 22px;
-    line-height: 28px;
+    font-family: 'Flama', 'helvetica neue', 'helvetica', 'arial', 'sans';
+    color: #666;
+    font-size: 16px;
+    line-height: 18px;
     letter-spacing: 1px;
     padding-right: 20px;
     margin-bottom: 15px; }
 
-.large-menu-title, .large-menu-category-header, .large-menu-category-grid, .large-menu-divider, .large-menu-search-icon, .large-menu-stores-view {
+.large-menu-title, .large-menu-category-header, .large-menu-category-grid, .large-menu-divider, .large-menu-search-icon {
   z-index: 11; }
 
 .large-menu-stores-view-bg, .large-menu-search-view-bg {
