--- a/app/application.scss
+++ b/app/application.scss
@@ -381,6 +381,10 @@ g.active {
     font-family: georgia;
     font-weight: normal;
   }
+
+  &.active {
+    background: $red;
+  }
 }
 
 .large-menu-store-grid {
@@ -396,6 +400,17 @@ g.active {
       letter-spacing: 1px;
       padding-right: 20px;
       margin-bottom: 15px;
+      position: relative;
+
+      div.floor-indicator {
+        position: absolute;
+        height: 8px;
+        width: 8px;
+        border-radius: 100px;
+        background: $red;
+        top: 6px;
+        left: -15px;
+      }
     }
   }
 }
