--- a/app/public/assets/application.css
+++ b/app/public/assets/application.css
@@ -576,6 +576,8 @@ g.active .key-background {
     margin-top: -10px;
     font-family: georgia;
     font-weight: normal; }
+  .large-menu-floor.active {
+    background: #ed1f26; }
 
 .large-menu-store-grid ul {
   list-style-type: none;
@@ -587,7 +589,16 @@ g.active .key-background {
     line-height: 18px;
     letter-spacing: 1px;
     padding-right: 20px;
-    margin-bottom: 15px; }
+    margin-bottom: 15px;
+    position: relative; }
+    .large-menu-store-grid ul li div.floor-indicator {
+      position: absolute;
+      height: 8px;
+      width: 8px;
+      border-radius: 100px;
+      background: #ed1f26;
+      top: 6px;
+      left: -15px; }
 
 .large-menu-title, .large-menu-category-header, .large-menu-category-grid, .large-menu-divider, .large-menu-search-icon {
   z-index: 11; }
