--- a/app/application.scss
+++ b/app/application.scss
@@ -93,6 +93,22 @@ webview {
 }
 
 
+// Screensaver
+// ----------------------------------------------------------------------
+
+.screensaver-touch {
+  border-radius: 50%;
+  background-color: $red;
+  h1 {
+    color: #fff;
+    text-align: center;
+    line-height: 500px;
+    margin: 0;
+    padding: 0;
+  }
+}
+
+
 // Menu
 // ----------------------------------------------------------------------
 
