add in text for missing logos in directory

--- a/app/public/assets/application.css
+++ b/app/public/assets/application.css
@@ -457,6 +457,14 @@ webview {
   font-weight: 700;
   color: #c7242e !important; }
 
+.directory-no-logo-text {
+  font-size: 300%;
+  color: #656667;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  line-height: 200px; }
+
 .txt-center {
   text-align: center; }
 
