--- a/app/application.scss
+++ b/app/application.scss
@@ -189,7 +189,7 @@ webview {
 
 
 .directoryCategory {
-    border-right: 25px solid #dfdfde;
+  border-right: 25px solid #dfdfde;
 }
 
 .directoryCategory h3 {
@@ -206,6 +206,14 @@ webview {
   color: #c7242e !important;
 }
 
+.directory-no-logo-text {
+  font-size: 300%;
+  color: #656667;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  line-height: 200px;
+}
 
 .txt-center {
   text-align: center;
